--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 services:
  - docker
-before_install:
+before_install: travis_wait
  - docker build -t pandiec/docker-react -f Dockerfile.dev .
 script:
  - docker run pandiec/docker-react npm run test -- --coverage
