--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ sudo: required
 services:
  - docker
 before_install: 
+ gem install bundler --pre
  - travis_wait docker build -t pandiec/docker-react -f Dockerfile.dev .
 script:
  - travis_wait 60 docker run pandiec/docker-react npm run test -- --coverage
