added travis file & Expose in Dockerfile & added gem entry

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ services:
  - docker
 before_install: 
  gem install bundler --pre
- - travis_wait docker build -t pandiec/docker-react -f Dockerfile.dev .
+ - docker build -t pandiec/docker-react -f Dockerfile.dev .
 script:
  - travis_wait 60 docker run pandiec/docker-react npm run test -- --coverage
