--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 sudo: required
 services:
  - docker
-before_install:  gem install bundler --pre
+before_install: 
+ - gem install bundler --pre
  - docker build -t pandiec/docker-react -f Dockerfile.dev .
 script:
  - docker run pandiec/docker-react npm run test -- --coverage
